--- a/template/src/index.html
+++ b/template/src/index.html
@@ -9,10 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <title>Application Builder</title>
 </head>
 <body>
-    hello world!<br />
-    you have create a new project by simplize.
+    <%- include('html/demo/home.html') %>
+    <%- include('html/demo/info.html') %>
 </body>
 </html>
