--- a/template/src/css/index.css
+++ b/template/src/css/index.css
@@ -1,3 +1,25 @@
 body{
-    background-color: #eee;
+    color:#333;
+}
+.white{
+    background-color: #fff;
+}
+
+a:link,a:visited{
+    color:#337ab7;
+}
+a:hover{
+    color:#333;
+}
+
+.main{
+    text-align: center;
+}
+.fa-html5{
+    font-size: 200px;
+    color:#999;
+}
+.main .jump{
+    display: block;
+    margin-top: 50px;
 }
