--- a/template/src/html/demo/home.html
+++ b/template/src/html/demo/home.html
@@ -1,6 +1,6 @@
 <template name="index">
     <middle class="main" v-redirect="'/info'">
         <i class="fa fa-html5"></i>
-        <div class="jump">Go to info.html</div>
+        <div class="jump">Welcome to use simplize!</div>
     </middle>
 </template>
