--- a/template/src/index.html
+++ b/template/src/index.html
@@ -13,7 +13,7 @@
     <title>Application Builder</title>
 </head>
 <body>
-    <%- include('html/demo/home.html') %>
-    <%- include('html/demo/info.html') %>
+    <%- include('html/home.html') %>
+    <%- include('html/info.html') %>
 </body>
 </html>
